modified registration flow
